methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:17: error: not found: value seenBaggle
        seenBaggle = true
        ^MethodsReturning:18: error: not found: value seenBaggle
        return seenBaggle 
               ^MethodsReturning:16: error: type mismatch;
 found   : Unit
 required: Boolean
      if (sawBaggle){
      ^