methods.returning.MethodsReturning.scala.code
var sawBaggle :Boolean = false
var seebBaggle : Boolean = false 
for (stepper <-1 to 6){
     forward()
}  
def haveBaggle():Boolean ={
      if (isOverBaggle()){
        sawBaggle= true
        return sawBaggle
      }else{
        forward()
      }
      for (stepper1 <- 1 to 6){
          backward()
      }
      if (sawBaggle){
        seenBaggle = true
        return seenBaggle 
      }
}